--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -18,7 +18,8 @@ truncation_symbol = '…/'
 
 [hostname]
 ssh_only = false
-format = '[$hostname](blue)'
+style = 'blue'
+format = '[$hostname]'
 trim_at = '.hrlou.net'
 disabled = false
 
