--- a/dot_zsh/functions/executable_pkg.tmpl
+++ b/dot_zsh/functions/executable_pkg.tmpl
@@ -1,27 +1,26 @@
 #!/usr/bin/env zsh
 # Universal pkg command
-OS="$(uname -s)"
 
-if [[ "$OS" == "{{ .chezmoi.kernel.ostype }}" ]]; then
-	# Debian
-	if (( $+commands[dpkg] )); then
-		PKG="dpkg"
-		(( $+commands[apt] )) && PKG="apt"
-		(( $+commands[apt-get] )) && PKG="apt-get"
-		(( $+commands[nala] )) && PKG="nala"
-	elif (( $+commands[rpm] )); then
-		PKG="rpm"
-		(( $+commands[yum] )) && PKG="yum" 
-		(( $+commands[dnf] )) && PKG="dnf"
-		(( $+commands[zypper] )) && PKG="zypper"
-	fi
-elif [[ "$OS" == "FreeBSD" ]]; then
-	(( $+commands[pkg] )) && PKG="pkg"
-elif [[ "$OS" == "OpenBSD" ]]; then
-	(( $+commands[pkg_add] )) && PKG="pkg_add"
-else
-	(( $+commands[pkg] )) && PKG="pkg" || exit 1
+# Debian
+{{ if eq .chezmoi.os "linux" }}
+if (( $+commands[dpkg] )); then
+	PKG="dpkg"
+	(( $+commands[apt] )) && PKG="apt"
+	(( $+commands[apt-get] )) && PKG="apt-get"
+	(( $+commands[nala] )) && PKG="nala"
+elif (( $+commands[rpm] )); then
+	PKG="rpm"
+	(( $+commands[yum] )) && PKG="yum" 
+	(( $+commands[dnf] )) && PKG="dnf"
+	(( $+commands[zypper] )) && PKG="zypper"
 fi
+{{ else if eq .chezmoi.os "freebsd" }}
+(( $+commands[pkg] )) && PKG="pkg"
+{{ else if eq .chezmoi.os "openbsd" }}
+(( $+commands[pkg_add] )) && PKG="pkg_add"
+{{ else }}	
+(( $+commands[pkg] )) && PKG="pkg" || exit 1
+{{ end }}
 
 PKG="$(which "$PKG")"
 SUPER="su - -c"
