--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -25,7 +25,7 @@ style = 'yellow'
 {{ else }}
 style = 'blue'
 {{ end }}
-format = '[$hostname](style)'
+format = '[$hostname]($style)'
 trim_at = '.hrlou.net'
 disabled = false
 
