--- a/symlink_win.tmpl
+++ b/symlink_win.tmpl
@@ -1,1 +1,5 @@
-/mnt/c/Users/hrl
+{{ if eq .chezmoi.os "linux" }}
+{{   if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
+/mnt/c/Users/{{ .chezmoi.username }}
+{{   end }}
+{{ end }}
