--- a/dot_zsh/conf.d/empty_sys-const.zsh.tmpl
+++ b/dot_zsh/conf.d/empty_sys-const.zsh.tmpl
@@ -1,4 +1,5 @@
 #!/usr/bin/env zsh
+# vim: ft=zsh
 
 # SUPER #
 SUPER="su - -c"
@@ -31,5 +32,3 @@ PKG="pkg_add"
 {{ end }}
 export PKG="$(which "$PKG")"
 # PKG #
-
-# vim: syntax=zsh
