--- a/dot_zsh/conf.d/empty_sys-const.zsh.tmpl
+++ b/dot_zsh/conf.d/empty_sys-const.zsh.tmpl
@@ -10,19 +10,17 @@ export SUPER="$(which "$SUPER")"
 
 # PKG #
 {{ if eq .chezmoi.os "linux" }}
-{{   if eq .chezmoi.osRelease.id "debian" }}
-PKG="dpkg"
-(( $+commands[apt] )) && PKG="apt"
-(( $+commands[apt-get] )) && PKG="apt-get"
-(( $+commands[nala] )) && PKG="nala"
-{{   else }}
-if (( $+commands[rpm] )); then
+if (( $+commands[dpkg] )); then
+	PKG="dpkg"
+	(( $+commands[apt] )) && PKG="apt"
+	(( $+commands[apt-get] )) && PKG="apt-get"
+	(( $+commands[nala] )) && PKG="nala"
+elif (( $+commands[rpm] )); then
 	PKG="rpm"
 	(( $+commands[yum] )) && PKG="yum" 
 	(( $+commands[dnf] )) && PKG="dnf"
 	(( $+commands[zypper] )) && PKG="zypper"
 fi
-{{   end }}
 {{ else if eq .chezmoi.os "freebsd" }}
 PKG="pkg"
 {{ else if eq .chezmoi.os "openbsd" }}
