--- a/dot_zsh/conf.d/empty_sys-const.zsh.tmpl
+++ b/dot_zsh/conf.d/empty_sys-const.zsh.tmpl
@@ -1,11 +1,14 @@
 #!/usr/bin/env zsh
 # vim: ft=zsh
+[[ "$(uname -a)" =~ "android" ]] && export TERMUX
 
 # SUPER #
-SUPER="su - -c"
-(( $+commands[sudo] )) && SUPER="sudo"
-(( $+commands[doas] )) && SUPER="doas"
-export SUPER="$(which "$SUPER")"
+if [ -z $TERMUX ]; then
+	SUPER="su - -c"
+	(( $+commands[sudo] )) && SUPER="sudo"
+	(( $+commands[doas] )) && SUPER="doas"
+	export SUPER="$(which "$SUPER")"
+fi
 # SUPER #
 
 # PKG #
