--- a/dot_zsh/conf.d/empty_sys-const.zsh.tmpl
+++ b/dot_zsh/conf.d/empty_sys-const.zsh.tmpl
@@ -2,7 +2,8 @@
 # vim: ft=zsh
 
 # SUPER #
-(( $+commands[su] )) && su && SUPER="su - -c"
+[[ "$OSTYPE" == linux-android ]] || \
+	(( $+commands[su] )) && SUPER="su - -c"
 (( $+commands[sudo] )) && SUPER="sudo"
 (( $+commands[doas] )) && SUPER="doas"
 export SUPER="$(which "$SUPER")"
