--- a/run_before_00-install-pre-requisites.sh.tmpl
+++ b/run_before_00-install-pre-requisites.sh.tmpl
@@ -4,7 +4,7 @@ set -eu
 
 {{ if eq .chezmoi.os "linux" -}}
 if command -v apt >/dev/null; then
-	echo "Debian Based Distro"
+	echo "Running on debian based distribution"
 	# install nala
 	if ! command -v nala >/dev/null; then
         	echo "deb [arch=amd64,arm64,armhf] http://deb.volian.org/volian/ scar main" | sudo tee /etc/apt/sources.list.d/volian-archive-scar-unstable.list
@@ -20,10 +20,13 @@ if command -v apt >/dev/null; then
 	if ! command -v zsh >/dev/null; then
 		sudo nala install -y zsh
 	fi
-	# install rust
-	if ! command -v cargo >/dev/null; then
-		curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
-	fi
+fi
+# install rust
+if ! command -v cargo >/dev/null; then
+	curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+fi
+if ! command -v starship >/dev/null; then
+	curl --proto '=https' --tlsv1.2 -sSf https://starship.rs/install.sh | sh
 fi
 {{ else }}
 echo "Unimplemented"
