--- a/run_before_00-install-pre-requisites.sh.tmpl
+++ b/run_before_00-install-pre-requisites.sh.tmpl
@@ -26,7 +26,7 @@ if ! command -v cargo >/dev/null; then
 	curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
 fi
 if ! command -v starship >/dev/null; then
-	curl --proto '=https' --tlsv1.2 -sSf https://starship.rs/install.sh | sh
+	curl --proto '=https' --tlsv1.2 -sSf https://starship.rs/install.sh | sudo sh
 fi
 {{ else }}
 echo "Unimplemented"
