--- a/dot_config/private_chezmoi/chezmoi.toml.tmpl
+++ b/dot_config/private_chezmoi/chezmoi.toml.tmpl
@@ -1,7 +1,8 @@
+{{- $email := promptStringOnce . "email" "Email address" -}}
+
 [data]
-	email = "{{ .email }}"
-	name = "{{ .name }}"
+	email = {{ $email | quote }}
 
 [git]
-    autoCommit = true
-    autoPush = true
+	autoCommit = true
+	autoPush = true
