--- a/run_before_02-finalise.sh.tmpl
+++ b/run_before_02-finalise.sh.tmpl
@@ -1,5 +1,8 @@
 #!{{ lookPath "bash" }}
-#_shell=$(awk -F: -v user="$USER" '$1 == user {print $NF}' /etc/passwd)
-#[ "$_shell" != "$(which zsh)" ] && sudo chsh -s $(which zsh) "$USER"
+if [[ "$SHELL" != "$(which zsh)" ]]; then
+	echo "Chaning shell to ZSH"
+	chsh -s "$(which zsh)"
+fi
+
 # this stops errors, do not remove
 exit 0
