--- a/symlink_win.tmpl
+++ b/symlink_win.tmpl
@@ -1,5 +1,5 @@
-{{ if eq .chezmoi.os "linux" }}
-{{   if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
+{{- if eq .chezmoi.os "linux" -}}
+{{-   if (.chezmoi.kernel.osrelease | lower | contains "microsoft") -}}
 /mnt/c/Users/{{ .chezmoi.username }}
-{{   end }}
-{{ end }}
+{{-   end -}}
+{{- end -}}
