--- a/dot_ssh/private_config.tmpl
+++ b/dot_ssh/private_config.tmpl
@@ -3,7 +3,7 @@ Host git.hrlou.net
         User git
 	Port 2052
 
-{{- if eq .domain "hrlou.net" -}}
+{{ if eq .domain "hrlou.net" -}}
 Host mc mc.hrlou.net
 	Hostname 10.0.1.64
 	User minecraft
