--- a/run_before_00-install-package-mgr.sh.tmpl
+++ b/run_before_00-install-package-mgr.sh.tmpl
@@ -3,6 +3,14 @@ set -eu
 
 export LC_ALL=C.UTF-8
 export LANG=C.UTF-8
+
+# command -v su >/dev/null || SUPER="su - -c"
+# command -v sudo >/dev/null || SUPER="sudo"
+# command -v doas >/dev/null || SUPER="doas"
+# export SUPER=$(sh -c "which $SUPER")
+# [[ "$OSTYPE" == linux-android ]] && unset SUPER
+# [[ $UID == 0 ]] && unset SUPER
+
 # Make blank so test works
 PACKAGES=''
 
@@ -11,6 +19,7 @@ command -v cmake >/dev/null || PACKAGES+="cmake "
 command -v curl >/dev/null || PACKAGES+="curl "
 command -v vim >/dev/null || PACKAGES+="vim "		
 command -v zsh >/dev/null || PACKAGES+="zsh "
+command -v python3 >/dev/null || PACKAGES+="python3 python3-pip "
 
 # DEBIAN
 if command -v apt >/dev/null; then
