--- a/run_before_02-finalise.sh.tmpl
+++ b/run_before_02-finalise.sh.tmpl
@@ -4,5 +4,8 @@ if [[ "$SHELL" != "$(which zsh)" ]]; then
 	chsh -s "$(which zsh)"
 fi
 
+# install python as default
+$SUPER update-alternatives --install /usr/bin/python python /usr/bin/python3 1
+
 # this stops errors, do not remove
 exit 0
