--- a/run_before_01-install-manual.sh.tmpl
+++ b/run_before_01-install-manual.sh.tmpl
@@ -1,4 +1,4 @@
 #!{{ lookPath "bash" }}
 if ! command -v starship >/dev/null; then
-	curl -sS https://starship.rs/install.sh | sudo sh -s -- -y >/dev/null
+	curl -sS https://starship.rs/install.sh | {{ .os.super }} sh -s -- -y >/dev/null
 fi
