--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -1,11 +1,10 @@
 format = '''
-[┌─ ](bold green)$username@$hostname:$directory
+[┌─ ](bold green)$username@$hostname$git_status:$directory
 [└─>](bold green) '''
 add_newline = false
 
-# Replace the '❯' symbol in the prompt with '➜'
-[character] # The name of the module we are configuring is 'character'
-success_symbol = '[➜](bold green)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
+[character]
+success_symbol = '[➜](bold green)'
 
 [package]
 disabled = true
@@ -15,6 +14,19 @@ read_only=' 🔒'
 style='blue bold'
 truncation_length = 4
 truncation_symbol = '…/'
+
+[git_status]
+conflicted = '🏳'
+ahead = '🏎💨'
+behind = '😰'
+diverged = '😵'
+up_to_date = '✓'
+untracked = '🤷'
+stashed = '📦'
+modified = '📝'
+staged = '[++\($count\)](green)'
+renamed = '👅'
+deleted = '🗑'
 
 [hostname]
 style = '{{ .style.os_color }}'
