--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -16,6 +16,7 @@ truncation_length = 4
 truncation_symbol = '…/'
 
 [git_status]
+format = '([\[$all_status$ahead_behind\]]($style))'
 conflicted = '🏳'
 ahead = '🏎💨'
 behind = '😰'
