--- a/run_before_00-install-package-mgr.sh.tmpl
+++ b/run_before_00-install-package-mgr.sh.tmpl
@@ -17,7 +17,7 @@ export LC_ALL=C.UTF-8
 export LANG=C.UTF-8
 
 # Make blank so test works
-PKG=''
+MGR=''
 PACKAGES=''
 
 # COMMANDS
@@ -27,7 +27,7 @@ _pkg_find_all() {
 	_pkg_add curl
 	_pkg_add vim
 	_pkg_add zsh
-	if [ "$PKG" == "dpkg" ]; then
+	if [ "$MGR" == "dpkg" ]; then
 		_pkg_add python3 "python3 python3-pip"
 		_pkg_add gcc build-essential
 	fi
@@ -36,7 +36,7 @@ _pkg_find_all() {
 # DEBIAN
 if _cmd_check dpkg; then
 	_log "dpkg found"
-	PKG='dpkg'
+	MGR='dpkg'
 	if ! command -v nala >/dev/null; then
 		_log "installing nala"
         	echo "deb [arch=amd64,arm64,armhf] http://deb.volian.org/volian/ scar main" | {{ .os.super }} tee /etc/apt/sources.list.d/volian-archive-scar-unstable.list
@@ -50,8 +50,10 @@ if _cmd_check dpkg; then
 		_log "installing packages..."
 		sleep 1
 		{{ .os.super }} nala install -y ${PACKAGES}
-		_log "packages installed!"
+		_log "packages installed"
 	fi
+else
+	_log_warn "package manager could not be identified"
 fi
 
 unset PACKAGES
