--- a/run_before_01-install-manual.sh.tmpl
+++ b/run_before_01-install-manual.sh.tmpl
@@ -2,8 +2,8 @@
 source '{{ .chezmoi.sourceDir }}/.assets/include.sh'
 
 if ! _cmd_check starship; then
-	_log_info "starship not found"
-	_log_info "installing starship"
+	_log_warn "starship not found"
+	_log "installing starship"
 	curl -sS https://starship.rs/install.sh | {{ .os.super }} sh -s -- -y >/dev/null
-	_log_info "starship installed"
+	_log_info "starship has been installed"
 fi
