--- a/run_before_02-python.sh.tmpl
+++ b/run_before_02-python.sh.tmpl
@@ -1,13 +1,7 @@
 #!{{ lookPath "bash" }}
 source '{{ .chezmoi.sourceDir }}/.assets/include.sh'
 
-if [[ "$SHELL" != "$(which zsh)" ]]; then
-	_log_info "shell is not set to zsh"
-	_log "setting shell to zsh"
-	chsh -s "$(which zsh)"
-fi
-
-# install python as default
+# set default python
 if _cmd_check python3; then
 	PYTHON_3="{{ lookPath "python3" }}"
 	PYTHON="$(dirname "$PYTHON_3")/python"
@@ -16,6 +10,3 @@ if _cmd_check python3; then
 		{{ .os.super }} update-alternatives --install $PYTHON python $PYTHON_3 1
 	fi
 fi
-
-# this stops errors, do not remove
-exit 0
