--- a/run_before_00-install-package-mgr.sh.tmpl
+++ b/run_before_00-install-package-mgr.sh.tmpl
@@ -22,13 +22,14 @@ PACKAGES=''
 
 # COMMANDS
 _pkg_find_all() {
+	_pkg_add git
 	_pkg_add htop
 	_pkg_add cmake
 	_pkg_add curl
+	_pkg_add ranger
 	_pkg_add vim
 	_pkg_add zsh
 	if [ "$MGR" == "dpkg" ]; then
-		_pkg_add python3 "python3 python3-pip"
 		_pkg_add gcc build-essential
 	fi
 }
@@ -42,7 +43,7 @@ if _cmd_check dpkg; then
         	echo "deb [arch=amd64,arm64,armhf] http://deb.volian.org/volian/ scar main" | {{ .os.super }} tee /etc/apt/sources.list.d/volian-archive-scar-unstable.list
         	curl --output - https://deb.volian.org/volian/scar.key | {{ .os.super }} tee /etc/apt/trusted.gpg.d/volian-archive-scar-unstable.gpg >"/dev/null"
         	{{ .os.super }} apt-get update >"/dev/null"
-        	{{ .os.super }} apt-get install -y python3 >"/dev/null"
+        	{{ .os.super }} apt-get install -y python3 python3-pip >"/dev/null"
 		# this is a really crappy work around 
 		[[ $(python3 -V | awk '{print$2}' | awk -F '.' '{print $2}') -ge 10 ]] && NALA="nala" || NALA="nala-legacy"
 		{{ .os.super }} apt-get install -y "${NALA}" >"/dev/null"
