copy ssh template fix

--- a/run_before_99-finalise.sh.tmpl
+++ b/run_before_99-finalise.sh.tmpl
@@ -7,7 +7,7 @@ if [[ "$SHELL" != "$(which zsh)" ]]; then
 	chsh -s "$(which zsh)"
 fi
 
-{{ os.wsl }}
+{{ if .os.wsl }}
 _log "copying windows ssh keys"
 cp $HOME/win/.ssh/id* $HOME/.ssh/
 chmod 700 $HOME/.ssh/id*
