--- a/run_before_00-install-package-mgr.sh.tmpl
+++ b/run_before_00-install-package-mgr.sh.tmpl
@@ -7,9 +7,9 @@ _pkg_add() {
 	[ -z ${2+x} ] && local pkg="$cmd" || local pkg="$2"
 	if ! _cmd_check $cmd; then
 		PACKAGES+="$pkg "
-		_log_info "going to install '${pkg}'"
+		_log_debug "going to install '${pkg}'"
 	else
-		_log_info "skipping '${pkg}'"
+		_log_debug "skipping '${pkg}'"
 	fi
 }
 
@@ -37,10 +37,10 @@ _pkg_find_all() {
 
 # DEBIAN
 if _cmd_check dpkg; then
-	_log "dpkg found"
+	_log_info "dpkg found"
 	MGR='dpkg'
 	if ! command -v nala >/dev/null; then
-		_log "installing nala"
+		_log_info "installing nala"
         	echo "deb [arch=amd64,arm64,armhf] http://deb.volian.org/volian/ scar main" | {{ .os.super }} tee /etc/apt/sources.list.d/volian-archive-scar-unstable.list
         	curl --output - https://deb.volian.org/volian/scar.key | {{ .os.super }} tee /etc/apt/trusted.gpg.d/volian-archive-scar-unstable.gpg >"/dev/null"
         	{{ .os.super }} apt-get update >"/dev/null"
@@ -49,13 +49,13 @@ if _cmd_check dpkg; then
 		[[ $(python3 -V | awk '{print$2}' | awk -F '.' '{print $2}') -ge 10 ]] && NALA="nala" || NALA="nala-legacy"
 		{{ .os.super }} apt-get install -y "${NALA}" >"/dev/null"
 	fi
-	_log "searching for packages"
+	_log_info "searching for packages"
 	_pkg_find_all
 	if [ ! -z "${PACKAGES}" ]; then
-		_log "installing packages..."
+		_log_info "installing packages..."
 		sleep 1
 		{{ .os.super }} nala install -y ${PACKAGES}
-		_log "packages installed"
+		_log_info "packages installed"
 	fi
 else
 	_log_warn "package manager could not be identified"
