--- a/run_before_01-install-manual.sh.tmpl
+++ b/run_before_01-install-manual.sh.tmpl
@@ -3,7 +3,7 @@ source '{{ .chezmoi.sourceDir }}/.assets/include.sh'
 
 if ! _cmd_check starship; then
 	_log_warn "starship not found"
-	_log "installing starship"
+	_log_info "installing starship"
 	curl -sS https://starship.rs/install.sh | {{ .os.super }} sh -s -- -y >/dev/null
-	_log_info "starship has been installed"
+	_log_debug "starship has been installed"
 fi
