--- a/run_before_99-finalise.sh.tmpl
+++ b/run_before_99-finalise.sh.tmpl
@@ -8,10 +8,12 @@ if [[ "$SHELL" != "$(which zsh)" ]]; then
 fi
 
 {{ if .os.wsl }}
-_log_info "copying windows ssh keys"
-cp $HOME/win/.ssh/id* $HOME/.ssh/
-chmod 700 $HOME/.ssh/id*
-chmod 755 $HOME/.ssh/id*.pub
+if [ -d "$HOME/win/.ssh" ]; then
+	_log_info "copying windows ssh keys"
+	cp $HOME/win/.ssh/id* $HOME/.ssh/
+	chmod 700 $HOME/.ssh/id*
+	chmod 755 $HOME/.ssh/id*.pub
+fi
 {{ else }}
 _log_info "generating ssh keys"
 ssh-keygen -t ed25519
