--- a/dot_zsh/conf.d/wsl.zsh.tmpl
+++ b/dot_zsh/conf.d/wsl.zsh.tmpl
@@ -1,5 +1,4 @@
-[[ "$(uname -r)" =~ "WSL" ]] || return
-# WSL Specific
+{{- if .os.wsl -}}
 export WINGET="$HOME/win/AppData/Local/Microsoft/WindowsApps/winget.exe"
 if [ -f "$WINGET" ]; then
 	alias winget="$WINGET"
@@ -13,3 +12,5 @@ export WIN_HOME
 
 [ -L "${HOME}/win" ] && [ -e "${HOME}/win" ] || \
 	ln -s "${WIN_HOME}" "${HOME}/win"
+
+{{- end -}}
