--- a/dot_zsh/conf.d/wsl.zsh.tmpl
+++ b/dot_zsh/conf.d/wsl.zsh.tmpl
@@ -1,16 +1,16 @@
 {{- if .os.wsl -}}
-export WINGET="$HOME/win/AppData/Local/Microsoft/WindowsApps/winget.exe"
-if [ -f "$WINGET" ]; then
-	alias winget="$WINGET"
-fi
+(( $+commands[winget.exe] )) && \
+	WINGET="$(which winget.exe)" || \
+	WINGET="$HOME/win/AppData/Local/Microsoft/WindowsApps/winget.exe"
+export WINGET
 
-(( $+commands[cmd.exe] )) && CMD="$(which cmd.exe)" || CMD="/mnt/c/Windows/system32/cmd.exe"
+(( $+commands[cmd.exe] )) && \
+	CMD="$(which cmd.exe)" || \
+	CMD="/mnt/c/Windows/system32/cmd.exe"
 export CMD
 
-WIN_HOME="$(wslpath $(${CMD} /c "<nul set /p=%UserProfile%" 2>/dev/null))"
-export WIN_HOME
-
+export WIN_HOME="$(wslpath $(${CMD} /c "<nul set /p=%UserProfile%" 2>/dev/null))"
+# check if symlink exists
 [ -L "${HOME}/win" ] && [ -e "${HOME}/win" ] || \
 	ln -s "${WIN_HOME}" "${HOME}/win"
-
 {{- end -}}
