update packages in script

--- a/run_before_00-install-package-mgr.sh.tmpl
+++ b/run_before_00-install-package-mgr.sh.tmpl
@@ -54,6 +54,7 @@ if _cmd_check dpkg; then
 	if [ ! -z "${PACKAGES}" ]; then
 		_log_info "installing packages..."
 		sleep 1
+		{{ .os.super }} nala update -y
 		{{ .os.super }} nala install -y ${PACKAGES}
 		_log_info "packages installed"
 	fi
