--- a/run_before_99-finalise.sh.tmpl
+++ b/run_before_99-finalise.sh.tmpl
@@ -10,13 +10,23 @@ fi
 {{ if .os.wsl }}
 if [ -d "$HOME/win/.ssh" ]; then
 	_log_info "copying windows ssh keys"
-	cp $HOME/win/.ssh/id* $HOME/.ssh/
+	if ls $HOME/.ssh/id* 1> /dev/null 2>&1; then
+		_log_debug "ssh keys already exist"
+	else
+		cp $HOME/win/.ssh/id* $HOME/.ssh/
+	fi
 	chmod 700 $HOME/.ssh/id*
 	chmod 755 $HOME/.ssh/id*.pub
+else
+	_log_debug "windows ssh keys not found"
 fi
 {{ else }}
-_log_info "generating ssh keys"
-ssh-keygen -t ed25519
+if [ ! -f "$HOME/.ssh/id_ed25519" ]; then
+	_log_info "generating ssh keys"
+	ssh-keygen -t ed25519
+else
+	_log_debug "ssh keys already exist"
+fi
 {{ end }}
 
 exit 0
