--- a/run_before_99-finalise.sh.tmpl
+++ b/run_before_99-finalise.sh.tmpl
@@ -7,26 +7,25 @@ if [[ "$SHELL" != "$(which zsh)" ]]; then
 	chsh -s "$(which zsh)"
 fi
 
-{{ if .os.wsl }}
-if [ -d "$HOME/win/.ssh" ]; then
-	_log_info "copying windows ssh keys"
-	if ls $HOME/.ssh/id* 1> /dev/null 2>&1; then
-		_log_debug "ssh keys already exist"
-	else
-		cp $HOME/win/.ssh/id* $HOME/.ssh/
-	fi
-	chmod 700 $HOME/.ssh/id*
-	chmod 755 $HOME/.ssh/id*.pub
+if ls $HOME/.ssh/id* 1> /dev/null 2>&1; then
+	_log_debug "ssh keys already exist"
 else
-	_log_debug "windows ssh keys not found"
-fi
-{{ else }}
-if [ ! -f "$HOME/.ssh/id_ed25519" ]; then
+	{{ if .os.wsl }}
+	if [ -d "$HOME/win/.ssh" ]; then
+		_log_debug "windows ssh keys not found"
+	else
+		_log_info "copying windows ssh keys"
+		cp $HOME/win/.ssh/id* $HOME/.ssh/
+		chmod 700 $HOME/.ssh/id*
+		chmod 755 $HOME/.ssh/id*.pub
+	fi
+	{{ else }}
 	_log_info "generating ssh keys"
 	ssh-keygen -t ed25519
-else
-	_log_debug "ssh keys already exist"
+	{{ end }}
 fi
-{{ end }}
+{{- if eq .domain "hrlou.net" }}
+chezmoi git remote set-url origin git@git.hrlou.net:hrlou/dotfiles.git
+{{- end }}
 
 exit 0
