--- a/dot_ssh/private_config.tmpl
+++ b/dot_ssh/private_config.tmpl
@@ -7,6 +7,10 @@ Host edge edge.hrlou.net
 	Hostname 10.0.1.2
 	User root
 
+Host ipa ipa.hrlou.net
+	Hostname 10.0.2.3
+	User root
+
 Host mc mc.hrlou.net
 	Hostname 10.0.2.64
 	User minecraft
