--- a/run_before_02-python.sh.tmpl
+++ b/run_before_02-python.sh.tmpl
@@ -6,7 +6,7 @@ if _cmd_check python3; then
 	PYTHON_3="{{ lookPath "python3" }}"
 	PYTHON="$(dirname "$PYTHON_3")/python"
 	if ! _cmd_check python; then
-		_log_info "setting python default to: '${PYTHON_3}'"
+		_log_info "Setting python default to: '${PYTHON_3}'"
 		{{ .os.super }} update-alternatives --install $PYTHON python $PYTHON_3 1
 	fi
 fi
