--- a/run_before_99-finalise.sh.tmpl
+++ b/run_before_99-finalise.sh.tmpl
@@ -1,31 +1,40 @@
 #!{{ lookPath "bash" }}
 source '{{ .chezmoi.sourceDir }}/.assets/include.sh'
 
+# Python
+if _cmd_check python3; then
+	PYTHON_3="{{ lookPath "python3" }}"
+	PYTHON="$(dirname "$PYTHON_3")/python"
+	if ! _cmd_check python; then
+		_log_info "Setting python default to: '${PYTHON_3}'"
+		{{ .os.super }} update-alternatives --install $PYTHON python $PYTHON_3 1
+	fi
+fi
+
+# Shell
 if [[ "$SHELL" != "$(which zsh)" ]]; then
-	_log_debug "shell is not set to zsh"
-	_log_info "setting shell to zsh"
+	_log_debug "Shell is not set to ZSH"
+	_log_info "Setting shell to ZSH"
 	chsh -s "$(which zsh)"
 fi
 
+# SSH
 if ls $HOME/.ssh/id* 1> /dev/null 2>&1; then
-	_log_debug "ssh keys already exist"
+	_log_debug "SSH keys already exist"
 else
 	{{ if .os.wsl }}
 	if [ -d "$HOME/win/.ssh" ]; then
-		_log_debug "windows ssh keys not found"
+		_log_debug "Windows SSH keys not found"
 	else
-		_log_info "copying windows ssh keys"
+		_log_info "Copying Windows SSH keys"
 		cp $HOME/win/.ssh/id* $HOME/.ssh/
 		chmod 700 $HOME/.ssh/id*
 		chmod 755 $HOME/.ssh/id*.pub
 	fi
 	{{ else }}
-	_log_info "generating ssh keys"
+	_log_info "Generating SSH keys"
 	ssh-keygen -t ed25519
 	{{ end }}
 fi
-{{- if eq .domain "hrlou.net" }}
-chezmoi git remote set-url origin git@git.hrlou.net:hrlou/dotfiles.git
-{{- end }}
 
 exit 0
