--- a/run_before_99-finalise.sh.tmpl
+++ b/run_before_99-finalise.sh.tmpl
@@ -27,9 +27,13 @@ else
 		log_debug "Windows SSH keys not found"
 	else
 		log_info "Copying Windows SSH keys"
-		cp $HOME/win/.ssh/id* $HOME/.ssh/
-		chmod 700 $HOME/.ssh/id*
-		chmod 755 $HOME/.ssh/id*.pub
+		#cp $HOME/win/.ssh/id* $HOME/.ssh/
+		for i in $HOME/win/.ssh/id*; do
+			name=`basename $i`
+			[ ! -f "$HOME/.ssh/$name" ] && \
+		done
+		#chmod 700 $HOME/.ssh/id*
+		#chmod 755 $HOME/.ssh/id*.pub
 	fi
 	{{ else }}
 	log_info "Generating SSH keys"
