--- a/run_before_99-finalise.sh.tmpl
+++ b/run_before_99-finalise.sh.tmpl
@@ -19,28 +19,27 @@ if [[ "$SHELL" != "$(which zsh)" ]]; then
 fi
 
 # SSH
-if ls $HOME/.ssh/id* 1> /dev/null 2>&1; then
-	log_debug "SSH keys already exist"
+{{ if .os.wsl }}
+if [ -d "$HOME/win/.ssh" ]; then
+	log_debug "Windows SSH keys not found"
 else
-	{{ if .os.wsl }}
-	if [ -d "$HOME/win/.ssh" ]; then
-		log_debug "Windows SSH keys not found"
-	else
-		log_info "Copying Windows SSH keys"
-		#cp $HOME/win/.ssh/id* $HOME/.ssh/
-		for i in $HOME/win/.ssh/id*; do
-			name=`basename $i`
-			[ -f "$HOME/.ssh/$name" ] && continue
-			log_info "Copying $name from Windows .ssh"
-			cp $i $HOME/.ssh/
-		done
-		chmod 700 $HOME/.ssh/id*
-		chmod 755 $HOME/.ssh/id*.pub
-	fi
-	{{ else }}
-	log_info "Generating SSH keys"
+	log_info "Copying Windows SSH keys"
+	#cp $HOME/win/.ssh/id* $HOME/.ssh/
+	for i in $HOME/win/.ssh/id*; do
+		name=`basename $i`
+		[ -f "$HOME/.ssh/$name" ] && continue
+		log_info "Copying $name from Windows .ssh"
+		cp $i $HOME/.ssh/
+	done
+	chmod 700 $HOME/.ssh/id*
+	chmod 755 $HOME/.ssh/id*.pub
+fi
+{{ else }}
+if [ ! -f "$HOME/.ssh/id_ed25519" ]; then
+	log_info "Generating ed25519 SSH keypair"
 	ssh-keygen -t ed25519
-	{{ end }}
+fi
+{{ end }}
 fi
 
 exit 0
