--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -4,7 +4,7 @@ format = '''
 add_newline = false
 
 [character]
-success_symbol = '[➜](bold green)'
+success_symbol = '[➜](bold red)'
 
 [package]
 disabled = true
