--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -1,6 +1,6 @@
 format = '''
 [┌─ ](bold green)$username@$hostname$git_status:$directory
-[└─>](bold green) '''
+[└─$symbol](bold green) '''
 add_newline = false
 
 [character]
